--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "react",
+  "name": "outlaw-fullstack-challenge-part-2",
   "version": "1.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
+  "description": "",
+  "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "7.17.9",
