--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,6 +1,5 @@
 {
   "infiniteLoopProtection": true,
   "hardReloadOnChange": true,
-  "view": "browser",
-  "template": "react"
+  "view": "browser"
 }
